--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><title>freeCodeCamp Tasks Overview</title></title>
+    <title>freeCodeCamp Tasks Overview</title>
 </head>
 <body>
     <a href="./pages/CatPhotoApp.html">Cat Photo App</a> 
